시큐리티 경로 수정